--- a/factorial.html
+++ b/factorial.html
@@ -3,9 +3,7 @@
 <body>
 <script>
 
-
-var num = prompt("Number please.");
-var n = parseInt(num); 
+var n = parseInt(prompt("Number please.")); 
 var factor = n
 
 function factorial(n) { //4 = n
